# crab-pot

./: .gitignore
addressing/: Cargo.toml
addressing/src/: lib.rs  main.rs
ch10/: Cargo.toml
ch10/src/: lib.rs  main.rs
ch12/: Cargo.toml
ch12/src/: lib.rs  main.rs
ch13-iter/: Cargo.toml
ch13-iter/src/: lib.rs  main.rs
crabpot/: Cargo.toml
crabpot/src/: lib.rs  main.rs
data/: Cargo.toml
data/src/: main.rs
eatery/: Cargo.toml
eatery/src/: lib.rs
errorin/: Cargo.toml
errorin/src/: main.rs
guessing_game/: .gitignore  Cargo.toml
guessing_game/src/: main.rs
herron-island/: Cargo.toml  Makefile
herron-island/src/: lib.rs  tides.rs  utils.rs
kingdoms/: Cargo.toml
kingdoms/src/: main.rs
ownit/: Cargo.toml
ownit/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
repetition/: Cargo.toml
repetition/src/: main.rs
serial-loop/: Cargo.toml  README.md
serial-loop/lib/: lib.rs
serial-loop/src/: main.rs
serial-scan/: Cargo.toml
serial-scan/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/tests/: web.rs
wasm-game-of-life/www/: index.html  index.js  package-lock.json
